--- a/Basket/Basket/Basket.csproj
+++ b/Basket/Basket/Basket.csproj
@@ -11,8 +11,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.709228" />
+    <None Remove="baskets.json" />
+    <None Remove="json\Basket-A.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="baskets.json" />
+    <EmbeddedResource Include="json\Basket-A.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Sharpnado.TaskLoaderView" Version="2.1.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1269" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Prism.Unity.Forms" Version="7.2.0.1367" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="BasketView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
